//
// Copyright 2021 Ant Group Co., Ltd.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package spu.device;

import "libspu/spu.proto";

message SymbolTableProto {
  //
  map<string, ValueProto> symbols = 1;
}

// A snapshot represents a pending-execution moment of SPU.
message SnapshotProto {
  // The party's rank.
  uint64 rank = 1;

  // The runtime configuration
  RuntimeConfig runtime_cfg = 2;

  // The executable file.
  ExecutableProto executable = 3;

  // The global symbols.
  SymbolTableProto environ = 4;
}

message RevealedSnapshotProto {
  // The runtime configuration
  RuntimeConfig runtime_cfg = 1;

  // The executable file.
  ExecutableProto executable = 2;

  // The global symbols.
  repeated SymbolTableProto parties = 3;
}
